# cookiecutter-nmbu

./: README.rst  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .pyproject.toml  .travis.yml  MANIFEST.in  README.rst  requirements.txt  setup.cfg  tox.ini
{{cookiecutter.project_slug}}/docs/: conf.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py
