{%- set license_classifiers = {
    'MIT license': 'License :: OSI Approved :: MIT License',
    'BSD license': 'License :: OSI Approved :: BSD License',
    'ISC license': 'License :: OSI Approved :: ISC License (ISCL)',
    'Apache Software License 2.0': 'License :: OSI Approved :: Apache Software License',
    'GNU General Public License v3': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} %}

[metadata]
name = {{ cookiecutter.project_slug }}
keywords={{ cookiecutter.project_slug }}
version = {{ cookiecutter.version }}
license = "{{ cookiecutter.open_source_license }}",
description = {{ cookiecutter.project_short_description }}
long_description = file: README.rst
author = {{ cookiecutter.full_name.replace('\"', '\\\"') }}
author_email = {{ cookiecutter.email }}
url=https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}
classifiers=
    Intended Audience :: Developers
{%- if cookiecutter.open_source_license in license_classifiers %}
    {{ license_classifiers[cookiecutter.open_source_license] }}
{%- endif %}
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    numpy

[options.packages.find]
where=src


{% if cookiecutter.bumpversion.lower() == "y" %}
[bumpversion]
current_version = {{ cookiecutter.version }}
commit = True
tag = True

[bumpversion:file:setup.cfg]
search = version = {current_version}
replace = version = {new_version}

[bumpversion:file:src/{{ cookiecutter.project_slug }}/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"
{% endif %}

{% if cookiecutter.build.lower() == "y" %}
[bdist_wheel]
universal = 1
{% endif %}

{% if cookiecutter.flake8 %}
[flake8]
exclude = docs
max-line-length = {{ cookiecutter.line_length }}
{% endif %}

